# spindalis

./: .gitignore  .justfile  Cargo.toml  README.md  pyproject.toml
.github/workflows/: clippy-lint-spindalis.yml  clippy-lint-spindalis_core.yml  clippy-lint-spindalis_macros.yml  clippy-lint.yml  rust_tests-spindalis.yml  rust_tests-spindalis_core.yml  rust_tests-spindalis_macros.yml  rust_tests.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
spindalis/: Cargo.toml
spindalis/examples/: README.md  bisection.rs  eigen.rs  linear_regression.rs  linear_systems.rs  lu_decomposition.rs  nrm.rs  polynomial_extended.rs  simple_integrals.rs  simple_polynomial.rs  univariate_integrals.rs
spindalis/src/: lib.rs  main.rs
spindalis/src/approximators/: bisection.rs  mod.rs  nrm.rs
spindalis/src/derivatives/: derivative.rs
spindalis/src/polynomials/: mod.rs  polynomial.rs  test_extended_parse.rs  test_simple_parse.rs  tests.rs
spindalis/src/polynomials/core/: ast.rs  complex.rs  extended.rs  mod.rs  multivar.rs  polynomial.rs  simple.rs
spindalis/src/polynomials/derivatives/: derivative.rs  mod.rs  partial.rs  simple.rs
spindalis/src/reduction/: mod.rs
spindalis/src/reduction/dimension/: mod.rs
spindalis/src/reduction/dimension/linear/: pca.rs
spindalis/src/reduction/linear/: pca.rs
spindalis/src/reduction/matrix/: hessenberg.rs  mod.rs
spindalis/src/regressors/: linear.rs  mod.rs
spindalis/src/regressors/linear/: gradient_descent.rs  least_squares.rs  mod.rs  polynomial.rs
spindalis/src/solvers/: bisection.rs  eigen.rs  gaussian_elim.rs  mod.rs  nrm.rs
spindalis/src/solvers/decomposition/: lu.rs  mod.rs  plu.rs
spindalis/src/solvers/eigen/: mod.rs  power_method.rs
spindalis/src/utils/: arr2D.rs  mod.rs  substitution.rs  variation.rs
spindalis/tests/: test_analytical_integral.rs  test_extended_derivative.rs  test_extended_parse.rs  test_indefinite_integral.rs  test_simple_definite_integral.rs  test_simple_derivative.rs  test_simple_indefinite_integral.rs  test_simple_integrals.rs  test_simple_parse.rs  test_univariate_definite_integral.rs
spindalis_core/: Cargo.toml
spindalis_core/src/: lib.rs
spindalis_core/src/derivatives/: extended.rs  intermediate.rs  (+3 more)
spindalis_derive/: Cargo.toml
spindalis_derive/src/: lib.rs
spindalis_macros/: Cargo.toml
spindalis_macros/src/: lib.rs
src/: main.py
src/spindalis/: linear.py
(+23 files in other folders)
