[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spindalis"
version = "0.0.2"
authors = [
	{ name ="Andrew Hennis", email="andrew.mr.hennis@gmail.com" },
]
description = "Multilingual implementation of several dimensionality reduction algorithms such as PCA and Manifold learning"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GPL v3.0",
	"Operating System :: OS Independent",
]
dependencies = [
  ""
]

[project.urls]
Homepage = "https://github.com/dawnandrew100/spindalis"
Issues = "https://github.com/dawnandrew100/spindalis/issues"
