[package]
name = "spindalis"
version = "0.6.0"
edition = "2024"

description = "A bioinformatics-focused library for numerical modeling, optimisation, and simulation written in Rust"
repository = "https://github.com/lignum-vitae/spindalis"
license = "MIT"
readme = "../README.md"

keywords = ["polynomials", "derivative", "integral", "solvers", "decomposition"]

[lib]
name = "spindalis"
path = "src/lib.rs"

[dependencies]
spindalis_core = { path = "../spindalis_core", version = ">=0.2.0" }
spindalis_macros = { path = "../spindalis_macros", version = "0.1.0" }
